# cadmus

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json
.gemini/: settings.json
cadmus-api/: Cargo.toml  Dockerfile
cadmus-api/src/: main.rs
cadmus-api/src/routes/: auth.rs  content.rs  mod.rs  stats.rs
cadmus-kernel/: Cargo.toml
cadmus-kernel/migrations/: 20260116_init.sql  20260120_security_policies.sql  20260122_add_user_profile.sql  20260124_sovereign_core_v2.sql  2026012601_cascade_config.sql  2026012602_verifiable_audit.sql  2026012603_complete_archetypes.sql  2026012604_collection_engine.sql  2026012702_add_planilha_class.sql  20260127_add_trial.sql  2026012803_professional_classes.sql  2026012804_class_grouping.sql  20260204_engine_v1.sql  20260205_performance_indexes.sql  20260208_cleanup_ontology.sql  20260219202556_extinguish_legacy_classes.sql  20260225123000_add_required_tier_to_classes.sql
cadmus-kernel/src/: lib.rs
cadmus-kernel/src/domain/: mod.rs  repository.rs
cadmus-kernel/src/domain/archetypes/: mod.rs
cadmus-kernel/src/domain/archetypes/modules/: finance.rs  legal.rs  mod.rs  tech.rs
cadmus-kernel/src/domain/collection/: mod.rs
cadmus-kernel/src/domain/configuration/: resolver.rs
cadmus-kernel/src/domain/logic/: aggregator.rs  integrity.rs  mod.rs
cadmus-kernel/src/infrastructure/: postgres.rs  sqlite.rs
cadmus-kernel/src/kernel/: types.rs
cadmus-kernel/src/modules/: mod.rs
cadmus-kernel/src/modules/configuration/: engine.rs
cadmus-kernel/src/modules/content/: mod.rs  socket.rs  storage.rs  workspace.rs
cadmus-kernel/src/modules/intelligence/: mod.rs  query_engine.rs  vector_store.rs
cadmus-kernel/src/modules/physics/: api.rs  worker.rs
cadmus-kernel/src/modules/security/: api.rs  domain.rs  infra.rs  mod.rs  service.rs
cadmus-kernel/src/shared/: database.rs  errors.rs  migrations.rs  mod.rs
cadmus-kernel/tests/: content_tests.rs  logic_tests.rs  security_tests.rs
(+140 files in other folders)
