[package]
name = "cadmus-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "uuid", "chrono", "json"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
yrs = { version = "0.17" }
y-sync = { version = "0.4", features = ["net"] }
async-trait = "0.1"
validator = { version = "0.16", features = ["derive"] }
config = "0.13"

# Collection Engine
evalexpr = "8.1"
urlencoding = "2.1"

# Database
pgvector = { version = "0.4", features = ["sqlx", "postgres"] }

# Crypto & Integrity
sha2 = "0.10"
hex = "0.4"
argon2 = "0.5"
pasetors = "0.6"
rand = "0.8"
serde_with = "3.0"
dotenvy = "0.15"

# Telemetry
tracing-opentelemetry = "0.22"
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
